# cookbook

./: README.md
cpp/: .clang-tidy  CMakeLists.txt  README.md  constant_vector.cpp  convert.cpp  csv.cpp  io.cpp  justfile  shared_pointer_.cpp  string_.cpp  sudoku.cpp  threads.cpp  unique_pointer_.cpp  vector_.cpp
cpp/graph/: bfs.cpp  dfs.cpp
cpp/leetcode/: stargazing.cpp
cpp/numerical_methods/: monte_carlo.cpp  newton_raphson.cpp
cpp/randomized/: reservoir_sampling.cpp
prolog/: README.md  prolog.pl
python/: README.md  argparse_.py  binary.py  context_manager.py  csv_.py  datetime_.py  flatten_json.py  io_.py  justfile  logging_.py  pyproject.toml
python/array/: __init__.py  binary_search.py  duplicates.py  floodfill.py  k_largest.py  shuffle.py  subset_sum.py  three_sum.py  two_sum.py
python/combinatorics/: __init__.py  permutation_index.py  permutations.py  powerset.py  stars_and_bars.py
python/data_structures/: deque.py  disjoint_set.py  linked_list.py  lru_cache.py  minheap.py  orderbook.py  trie.py
python/graph/: bfs.py  connected_components.py  dfs.py  dijkstra.py  prims.py  topological_sort.py
python/linked_list/: nth_from_last.py  reverse.py
python/maths/: __init__.py  base_conversion.py  collatz.py  fibonacci.py  median.py  newtons_method.py  prime_check.py  roman_numerals.py
python/misc/: balanced_parentheses.py  bresenham.py  count_islands.py  fizzbuzz.py  function.py  game_of_life.py  hanoi.py  monotonic.py  number_guesser.py  stargaze.py  subleq.py
python/recipes/: argparse_.py  binary.py  bresenham.py  csv_.py  (+9 more)
rust/: README.md
(+22 files in other folders)
